# xeneta-ratestask

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  er-diagram.md  pyproject.toml
.github/workflows/: tests.yml
db_scripts/: daily_price_rates.sql  origin_and_destination_validation.sql  rates-query.sql
migrations/: env.py
migrations/versions/: 63f16b65f9c7_add_table_and_query_optimizations_for_.py
rates_api/: config.py  database.py  exceptions.py  logging.py  main.py  models.py  usecases.py
tests/: test_api.py  test_rates.py
